# desktop-apps

./: .fssignore  .gitignore  README.md
.github/: copilot-instructions.md
.github/workflows/: binary-view-edit.yml  fast-secret-scanner.yml  filemon.yml
binary-view-edit/binrw-cli/: .gitignore  Cargo.toml  alphabet3.txt  debug_log.txt  hello.txt  test.hello.txt
binary-view-edit/binrw-cli/code snippets/: files.txt
binary-view-edit/binrw-cli/src/: argparse_interface_example.py  lib.rs  main reference.rs  main.rs  tempfile.rs
binary-view-edit/binrw-cli/src/utils/: argparse.rs  cmd_macro.rs  id3v1.rs  idv3v1_genre_data.txt  mod.rs  tempfile.rs
binary-view-edit/binrw-cli/tests/: copy.rs  diff.rs  file_id.rs  metadata.rs  read.rs  size.rs  write_overwrite.rs  write_splice.rs
binary-view-edit/client/: index.html  package-lock.json
binary-view-edit/client/src/: App.tsx  api.ts  index.css
binary-view-edit/client/src-tauri/: tauri.conf.json
binary-view-edit/client/src-tauri/src/: lib.rs
binary-view-edit/client/src/components/: HexEditor.tsx  HexViewer.tsx  Toolbar.tsx  WriteModal.tsx
client/: package.json
client/src/: App.tsx
client/src-tauri/: Cargo.toml
client/src-tauri/src/: lib.rs
client/src/components/: RangeBar.tsx  StringsPanel.tsx  Toolbar.tsx
fast-secret-scanner/: Cargo.toml
fast-secret-scanner/scripts/: write_patterns.py
fast-secret-scanner/src/: lib.rs  main.rs  patterns.rs  scanner.rs  types.rs
fast-secret-scanner/tests/: scan_tests.rs
filemon/: Cargo.toml
filemon/src/: lib.rs  main.rs
filemon/tests/: integration_tests.rs
