[package]
name = "fast-secret-scanner"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "fss"
path = "src/main.rs"

[lib]
name = "fast_secret_scanner"
path = "src/lib.rs"

[dependencies]
clap        = { version = "4", features = ["derive", "env"] }
regex       = "1"
walkdir     = "2"
colored     = "2"
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
git2        = { version = "0.20", default-features = false, features = ["https"] }
tempfile    = "3"
anyhow      = "1"

[dev-dependencies]
tempfile = "3"
